[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["redis"]
cassandra = []
redis = []

[dependencies]
tokio = { version = "1", features = ["full"] }
time = { version = "0.3.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
cassandra-cpp = "3.0.2"
anyhow = "1.0.86"
axum = "0.7.5"
dyn-clone = {version = "*"}
async-trait = {version = "*"}
fred = {version = "7.1.2"}